# bus_management

./: CMakeLists.txt  README.md
docs/: diagrams.vpp
scripts/: generate_manifest.py
src/main/java/: Application.java
src/main/java/db/: DatabaseFacade.java
src/main/java/db/auth/: AccountType.java  Authenticator.java
src/main/java/db/entities/: Bus.java  Entity.java  Line.java  Station.java
src/main/java/db/strategies/: AbstractDatabaseStrategy.java  IDatabaseStrategy.java  ManagerStrategy.java  UserStrategy.java
src/tests/: TestRunner.java
src/tests/acceptance/: SetUp.java
src/tests/acceptance/db/: TestDatabaseFacadeAddBus.java  TestDatabaseFacadeAddEntity.java  TestDatabaseFacadeAddLine.java  TestDatabaseFacadeAddStation.java
src/tests/db/: TestDBSuite.java  TestDatabaseFacade.java
src/tests/db/entities/: TestEntity.java
src/tests/fakes/db/: FakeDatabaseFacade.java
src/tests/fakes/db/auth/: FakeAuthenticator.java
src/tests/fakes/db/entities/: FakeEntity.java
src/tests/fakes/db/strategies/: FakeManagerStrategy.java
src/tests/unittests/: TestRunner.java
src/tests/unittests/db/: TestDBSuite.java  TestDatabaseFacade.java
src/tests/unittests/db/entities/: TestEntity.java
